[package]
name = "ffmpeg-aniskip"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
ureq = "2.9.1"
anyhow = "1.0.98"
tempfile = "3.20.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
ffmetadata = "0.1.2"
getopt = "1.1.9"
